--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
 
-    mappings channel: 'official', version: '1.19.2'
+    mappings channel: 'official', version: '1.19.3'
 
     runs {
         client {
@@ -105,8 +105,8 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.19.2-43.1.43'
-    runtimeOnly fg.deobf("mekanism:Mekanism:1.19.2-10.3.4.471")
+    minecraft 'net.minecraftforge:forge:1.19.3-44.1.21'
+   // runtimeOnly fg.deobf("mekanism:Mekanism:1.19.2-10.3.4.471")
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
