Initial update to 1.20

--- a/build.gradle
+++ b/build.gradle
@@ -5,18 +5,20 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.0.+', changing: true
     }
 }
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 plugins {
     id 'eclipse'
+    id 'idea'
     id 'maven-publish'
+    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
 }
 apply plugin: 'net.minecraftforge.gradle'
 
 
-version = '1.5'
+version = '1.6'
 group = 'de.neylux.infinitesource' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'infinitesource'
 
@@ -25,7 +27,7 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
 
-    mappings channel: 'official', version: '1.19.4'
+    mappings channel: 'official', version: '1.20'
 
     runs {
         client {
@@ -105,8 +107,8 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.19.4-45.0.22'
-   // runtimeOnly fg.deobf("mekanism:Mekanism:1.19.2-10.3.4.471")
+    minecraft 'net.minecraftforge:forge:1.20-46.0.1'
+    // runtimeOnly fg.deobf("mekanism:Mekanism:1.19.2-10.3.4.471")
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
